Adjust header padding and slideshow margin for improved layout consistency

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </div>
 
     <header class="header lg:flex justify-between items-center bg-[#00adef]">
-        <div class="flex justify-between items-center p-2 lg:p-8 w-full relative">
+        <div class="flex justify-between items-center p-2 lg:p-5 w-full relative">
             <a href="index.html">
                 <img class="h-16 ml-2" src="./assets/images/logobianco.png" alt="Logo Franchioni">
             </a>
@@ -118,7 +118,7 @@
     </header>
 
 
-    <div class="mt-20">
+    <div class="mt-20 lg:mt-[104px]">
         <div class="slideshow-container">
             <div class="slides"> <!-- gli alt sono fatti a caso -->
                 <img class="slide" alt="Selettori e Segnalazioni Movimenti" src="./assets/images/FotoPiccole/1crop.jpg" width="1200" height="675"></img>
