Update favicon links to use .ico format and add additional icon sizes for better compatibility

--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Franchioni">
     <link rel="stylesheet" href="./assets/styles.css">
-    <link rel="icon" type="image/x-icon" href="./assets/images/logoazzurro.png">
+    <link rel="icon" type="image/x-icon" href="./assets/images/logoazzurro.ico">
+    <link rel="apple-touch-icon" href="./assets/images/logoazzurro.ico">
+    <link rel="icon" type="image/png" sizes="192x192" href="./assets/images/logoazzurro.ico">
+    <link rel="icon" type="image/png" sizes="512x512" href="./assets/images/logoazzurro.ico">
     <script src="https://cdn.tailwindcss.com"></script>
     
     <!-- Schema.org Structured Data for Local Business -->
